2002-07-11  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/extcgi.py: fixed so it changes to the
	directory of the cgi program

	* SkunkWeb/SkunkWeb/constants.py: added CGI_JOB

	* SkunkWeb/Services/extcgi.py: added external CGI runner

2002-07-10  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/MySQL/__init__.py: finally fixed so that using the mysql
	service, plus having userModuleCleanup turend on will now actually
	work.
	(_real_connect): got rid of the exception handler since it masked
	the traceback and appears to have no useful function in and of
	itself.  Assuming it's a Roman-leftover since he was fond of this
	sort of thing.

2002-07-05  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/PyDO/mysqlconn.py: now allows you to use cacheUser
	without using a dictionary.

	* docs/PyDO/PyDO.tex (chapter{Operators}): added operators chapter
	and now in process of bringing this up to date.

	* SkunkWeb/sw.conf.in: fixed typo in HTTPKeepAliveTimeout
	(previously, the "a" in alive wasn't capitalized as it should've
	been)

2002-07-03  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/PyDO/PyDO.py: applied patch to static_getUnique found on
	sourceforge that fixes the problem when *no* rows are returned.

2002-07-01  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/scopeable/scope.py (Scopeable.pop): added index argument
	to pop, which is otherwise entirely useless (I can't think why
	you'd want it remove the last element of the dictlist).

2002-06-30  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/auth/__init__.py (getAuthorizer): made it so
	we don't need the PseudoDict thing we used to need.

2002-06-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Makefile.in (DEMO_FILES): added components for python
	website, whose absence was breaking the demo.

	* SkunkWeb/swpython.py.in: minor change to accomodate setattr
	hook. 
