@@ -16,15 +16,15 @@
 #      along with this program; if not, write to the Free Software
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 #   
-# $Id: bootloader.py.in,v 1.3 2002/06/05 20:29:20 drew_csillag Exp $
+# $Id: bootloader.py.in,v 1.4 2002/06/11 17:27:44 drew_csillag Exp $
 # Time-stamp: <01/04/23 15:51:51 smulloni>
 ########################################################################
+import confvars as _c
+SkunkRoot = _c.SKUNK_ROOT
+DEFAULT_CONFIG_FILE_NAME = _c.DEFAULT_CONFIG_FILE_NAME
 
-SkunkRoot = "@prefix@"
-DEFAULT_CONFIG_FILE_NAME = '@prefix@/etc/sw.conf'
-
-_servicesRoot = '@prefix@/lib/Services'
-_pylibsRoot = '@prefix@/lib/pylibs'
+_servicesRoot = _c.SERVICES_ROOT
+_pylibsRoot = _c.PYLIBS_ROOT
 
 #handle if we've not been run through configure
 if DEFAULT_CONFIG_FILE_NAME[0] == '@': #not populated by configure
@@ -61,7 +61,7 @@ def init(configFiles, SkunkRoot):
         ConfigLoader.loadConfigFile(c, KickStart.CONFIG_MODULE)
 
     Configuration.mergeDefaults(_config_files_ = configFiles,
-                                SkunkWebVersion = "@SW_VERSION@")
+                                SkunkWebVersion = _c.SKUNKWEB_VERSION)
     return mods
 
 def load():
@@ -74,6 +74,9 @@ def load():
 
 ########################################################################
 # $Log: bootloader.py.in,v $
+# Revision 1.4  2002/06/11 17:27:44  drew_csillag
+# fixed bug that made it not work with Python 2.1
+#
 # Revision 1.3  2002/06/05 20:29:20  drew_csillag
 # 	* SkunkWeb/SkunkWeb/Server.py: added comment at the top to remind
 # 	us that in the event that we add an import, that we add that import
