@@ -21,7 +21,7 @@ SkunkWebRetries	3
 
 # The location of the error page which gets displayed when SkunkWeb is
 # not accessible
-SkunkWebErrorDoc	@prefix@/share/skunk/modskunkweb_error.html  
+SkunkWebErrorDoc	@datadir@/skunk/modskunkweb_error.html  
 
 # The list of users to receive critical error emails. Should be a list
 # of space separated entries
