@@ -46,7 +46,7 @@ for (opt, optval) in optlist:
         configFiles = optval.split(':')
 
 
-SkunkWebPath = '@prefix@/lib'
+SkunkWebPath = '@libdir@'
 if SkunkWebPath[0] != '@':
     sys.path.append(SkunkWebPath)
 
