@@ -1,3 +1,8 @@
+2002-07-11  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* configure.in, SkunkWeb/configure.in (and numerous other files):
+	changes to configuration so skunk actually works in other layouts.
+
 2002-07-11  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>
 
 	* SkunkWeb/Services/extcgi.py: fixed so it changes to the
